# sparkplugb-toolkit

./: .gitignore  .gitmodules  README.md  array_packer.py  compile_proto_c.sh  example_payloads.json  example_payloads.py  main.py  mixed_payload.json  parse_payload.py  parse_payloads.py  payload_structure.py  pyproject.toml  tahu_python_helper.py  test.py  test_build.py
logs/: pytest-logs.txt
src-micro-protobuf/: sparkplug_b.pb.c  sparkplug_b.pb.h
src/proto_parser/: parser.py
src/protobuf_facade/: __init__.py  parser.py
src/sparkplug_b/: __init__.py  sparkplug_b.py
src/sparkplug_b/python/: sparkplug_b.py  sparkplug_b_pb2.pyi
src/sparkplug_b_parser/: __init__.py  sparkplugb_parser.py
src/sparkplug_b_parser/example_payloads/: base.py
src/sparkplug_b_toolkit/: __init__.py  sparkplug_b.py
src/sparkplug_b_toolkit/example_payloads/: __init__.py  dataset.py  timeseries.py
src/sparkplugb_parser/: __init__.py  sparkplug_b.py
src/sparkplugb_toolkit/: __init__.py  sparkplug_b_pb2.py  sparkplugb_parser.py
src/sparkplugb_toolkit/example_payloads/: byte.py  json.py
src/sparkplugb_validator/: __init__.py  validator.py
tests/: conftest.py  test_dataset_parsing.py  test_example_payloads.py  test_parsing_methods.py
tests/pbuf_parser/: test_parser.py
tests/protobuf_parser/: test_parser.py
tests/sparkplug_b/: conftest.py  test_dataset_parsing.py
tests/sparkplug_b_parser/: conftest.py  test_dataset_parsing.py  test_live_broker.py  test_timeseries_parsing.py
tests/sparkplugb_toolkit/: conftest.py  test_dataset_parsing.py
