[project]
name = "sparkplugb-payload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mypy-protobuf>=3.6.0", "pandas>=2.2.3", "pydantic>=2.10.5"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "paho-mqtt>=2.1.0",
    "pytest>=8.3.4",
]
